h264: fix weighted prediction indicator (SNB).

Implicit weight tables derivation (weighted_bipred_idc == 2) could
not be set. Only default weight tables were possible instead of
explicit weight tables provided by the codec layer.

https://bugs.freedesktop.org/show_bug.cgi?id=40820

Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>